<resources>
    <string name="app_name">Track It</string>
    <string name="action_settings">Settings</string>
    <string name="action_trending">Trending</string>
    <string name="action_refresh">Refresh</string>
    <string name="show_activity">Show</string>
    <string name="add">New Show</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="year">First Aired</string>
    <string name="rating">Rating</string>
    <string name="status">Status</string>
    <string name="overview">Overview</string>
    <string name="tab_2_default">Feels empty, add a few shows!</string>
    <string name="NULL">null</string>
    <string name="transition_poster">Transition</string>
    <string name="shows_error">No shows found. Please try a different search query.</string>
    <string name="expand">Expand</string>
    <string name="cast">Cast</string>
    <string name="stars">Stars</string>
    <string name="writer">Writer</string>
    <string name="genre">Genre</string>
    <string name="first_aired">First Aired</string>
    <string name="network">Network</string>
    <string name="air_date">Air Date</string>
    <string name="unknown">Unknown</string>
    <string name="action_update">Update Data</string>
    <string name="unavailable">Unavailable</string>

    <string name="connection_error">Unable to fetch data. Tap to retry.</string>
    <string name="timeout_error">Connection timed out. Tap to retry.</string>
    <string name="server_error">Error connecting to server. Tap to retry.</string>
    <string name="network_error">No network detected. Tap to retry.</string>
    <string name="auth_error">Authorization error. Tap to retry.</string>

    <string name="tab_3_upcoming">No upcoming episodes</string>
    <string name="tab_3_default">Upcoming episodes here</string>
    <string name="tab_1_default">Aired episodes here</string>
    <string name="tab_1_aired">No recent aired episodes</string>
    <string name="action_sort">Sort Shows</string>
    <string name="action_by_keyword">By Name</string>
    <string name="action_by_topic">By Air Date</string>
    <string name="seen">Seen</string>
    <string name="collection">Collection</string>
    <string name="actor_detail_activity">Cast</string>
    <string name="show_all">SHOW ALL</string>
    <string name="set_watched">Set watched</string>
    <string name="notifications">Notifications</string>
    <string name="general">General</string>
    <string name="change_images">Change Images</string>
    <string name="poster">Poster</string>
    <string name="banner">Banner</string>
    <string name="fan_art">Fan Art</string>
    <string name="update_images">Update Images</string>
    <string name="update_image_text">Automatically update show\'s images based on popularity</string>
    <string name="action_login">Trakt Login</string>
    <string name="trakt">Trakt</string>
    <string name="login_to_trakt">Login to Trakt</string>
    <string name="logout">Logout</string>
    <string name="reset_tutorial">Reset Tutorial</string>
    <string name="set_unwatched">Set unwatched</string>
    <string name="set_collected">Set collected</string>
    <string name="set_uncollected">Set uncollected</string>
    <string name="create_backup">Create Backup</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="no_unwatched_episodes_found">All caught up!</string>
    <string name="no_episodes_found">No episodes found</string>
    <string name="notify_at">Notify at</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="notification_time_default">Immediately, when an episode airs</string>
    <string name="notification_time">Notification Time</string>
    <string name="actor_error">No associated cast found</string>
    <string name="add_trakt_shows">Import all Trakt shows</string>
    <string name="hide_watched">Hide watched</string>
    <string name="no_images_available">No images available</string>
    <string name="infinite_time_frame">Infinite Time Frame</string>
    <string name="fetching_data_from_trakt">Fetching data from Trakt…</string>

</resources>
