<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:textColor="@color/ColorAccent"
        android:textSize="16sp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/notification_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:checked="true"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/notifications"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/notification_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_notification_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/notification_time_default"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/change_images"
        android:textColor="@color/ColorAccent"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/update_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:id="@+id/update_images_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/update_images_switch"
            android:layout_toStartOf="@+id/update_images_switch"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_images"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/update_image_text"
                android:textSize="14sp" />

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/update_images_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="false" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/poster"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/banner"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_fanart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/fan_art"
        android:textSize="18sp" />

</LinearLayout>