<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/episode_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_seen"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:minHeight="0dp"
                    android:padding="8dp"
                    android:text="@string/seen"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_collection"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:minHeight="0dp"
                    android:padding="8dp"
                    android:text="@string/collection"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_overview_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="20sp"
                android:textStyle="bold" />

            <include
                android:id="@+id/tv_overview"
                layout="@layout/expandable_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                style="@style/DividerGrey"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_aired_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal"
                android:textSize="15sp" />

            <!--<View
                style="@style/DividerGrey"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_writer_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/writer"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_horizontal"
                android:textSize="15sp" />-->

            <View
                style="@style/DividerGrey"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_rating_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rating"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:isIndicator="true"
                    android:numStars="10"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/voters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_episode_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/no_unwatched_episodes_found"
            android:textColor="@color/ColorAccent"
            android:textSize="22sp"
            android:visibility="gone" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>